--- a/ShoppingCart/ShoppingCart.Presentation.Web/Web.config
+++ b/ShoppingCart/ShoppingCart.Presentation.Web/Web.config
@@ -11,8 +11,7 @@
   </configSections>
   <dataConfiguration defaultDatabase="MyDb"/>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ShoppingCart.Presentation.Web-20161116115259.mdf;Initial Catalog=aspnet-ShoppingCart.Presentation.Web-20161116115259;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MyDb" connectionString="Database=MyDb;Server=.;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="MyDb" connectionString="Database=MyDb;Server=dvdribeiro.database.windows.net;uid=xxxxx;pwd=xxxxx" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
