--- a/ShoppingCart/ShoppingCart.Presentation.Web/ShoppingCart.Presentation.Web.csproj
+++ b/ShoppingCart/ShoppingCart.Presentation.Web/ShoppingCart.Presentation.Web.csproj
@@ -244,9 +244,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="ApplicationInsights.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="ApplicationInsights.config" />
     <None Include="Properties\PublishProfiles\Default.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\dataTables.bootstrap.min.js" />
