--- a/ShoppingCart/ShoppingCart.Presentation.Web/Web.config
+++ b/ShoppingCart/ShoppingCart.Presentation.Web/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <dataConfiguration defaultDatabase="MyDb"/>
   <connectionStrings>
-    <add name="MyDb" connectionString="Database=MyDb;Server=dvdribeiro.database.windows.net;uid=xxx;pwd=xxx" providerName="System.Data.SqlClient" />
+    <add name="MyDb" connectionString="Database=MyDb;Server=xxxxx.database.windows.net;uid=xxxxx;pwd=xxxxx" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
