--- a/ShoppingCart/ShoppingCart.Business.Entities/ShoppingCart.Business.Entities.csproj
+++ b/ShoppingCart/ShoppingCart.Business.Entities/ShoppingCart.Business.Entities.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ShoppingCart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShoppingCartItem.cs" />
+    <Compile Include="ShoppingCartItemCollection.cs" />
     <Compile Include="ShoppingCartItemDefinition.cs" />
     <Compile Include="ShoppingCartItemState.cs" />
     <Compile Include="ShoppingCartState.cs" />
